Fixed center background to stretch and fixed footer on chrome

--- a/scss/_main_styles.scss
+++ b/scss/_main_styles.scss
@@ -21,12 +21,13 @@ ul, li{
 
 body{
   display: flex;
-  min-height: 100vh;
+  height: 100vh;
   flex-direction: column;
 }
 
 header{
   background-color: $header-footer-background;
+  flex-shrink: 0;
 
   h1{
     text-align: center;
@@ -57,16 +58,24 @@ a:active{
   justify-content: center;
 }
 
+main{
+  font-size: 13pt;
+  line-height: 50%;
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+main > div{
+   flex: 1 0 auto;
+}
+
+
 #content_wrapper{
   padding: 2em;
   background-color: $content_color;
 }
 
-main{
-  font-size: 13pt;
-  line-height: 50%;
-  flex: 1;
-}
 
 #index-image{
   width: 74%;
@@ -75,11 +84,14 @@ main{
   margin: 0 auto;
 }
 
+
 footer{
   text-align: center;
   background-color: $header-footer-background;
   padding: 1em;
+  flex-shrink: 0;
   color: #ffffff;
+
 }
 
 i{
