--- a/scss/app.scss
+++ b/scss/app.scss
@@ -5,7 +5,7 @@
 @import 'motion-ui';
 
 @include foundation-global-styles;
-// @include foundation-grid;
+// @include foundation-grid
 @include foundation-flex-classes;
 @include foundation-flex-grid;
 @include foundation-typography;
@@ -44,7 +44,7 @@
 @include foundation-tooltip;
 @include foundation-top-bar;
 @include foundation-visibility-classes;
-@include foundation-float-classes;
+// @include foundation-float-classes;
 // @include foundation-flex-classes;
 
 @include motion-ui-transitions;
